SERVER-35421 Embedded options parsing can re-initialize.

(cherry picked from commit 06d98ac518613723d3e5aa80b6877941e164699f)