src/mongo/db/storage/storage_options.cpp
@@ -36,6 +36,27 @@
 
 namespace mongo {
 
+StorageGlobalParams::StorageGlobalParams() {
+    reset();
+}
+
+void StorageGlobalParams::reset() {
+    engine = "wiredTiger";
+    engineSetByUser = false;
+    dbpath = kDefaultDbPath;
+    upgrade = false;
+    repair = false;
+
+    // The intention here is to enable the journal by default if we are running on a 64 bit system.
+    dur = (sizeof(void*) == 8);
+
+    noTableScan.store(false);
+    directoryperdb = false;
+    syncdelay = 60.0;
+    readOnly = false;
+    groupCollections = false;
+}
+
 StorageGlobalParams storageGlobalParams;
 
 /**
