src/mongo/db/storage/storage_options.h
@@ -44,6 +44,9 @@
 namespace mongo {
 
 struct StorageGlobalParams {
+    StorageGlobalParams();
+    void reset();
+
     // Default data directory for mongod when running in non-config server mode.
     static const char* kDefaultDbPath;
 
@@ -53,23 +56,23 @@ struct StorageGlobalParams {
 
     // --storageEngine
     // storage engine for this instance of mongod.
-    std::string engine = "wiredTiger";
+    std::string engine;
 
     // True if --storageEngine was passed on the command line, and false otherwise.
-    bool engineSetByUser = false;
+    bool engineSetByUser;
 
     // The directory where the mongod instance stores its data.
-    std::string dbpath = kDefaultDbPath;
+    std::string dbpath;
 
     // --upgrade
     // Upgrades the on-disk data format of the files specified by the --dbpath to the
     // latest version, if needed.
-    bool upgrade = false;
+    bool upgrade;
 
     // --repair
     // Runs a repair routine on all databases. This is equivalent to shutting down and
     // running the repairDatabase database command on all databases.
-    bool repair = false;
+    bool repair;
 
     // --repairpath
     // Specifies the root directory containing MongoDB data files to use for the --repair
@@ -77,8 +80,7 @@ struct StorageGlobalParams {
     // Default: A _tmp directory within the path specified by the dbPath option.
     std::string repairpath;
 
-    // The intention here is to enable the journal by default if we are running on a 64 bit system.
-    bool dur = (sizeof(void*) == 8);  // --dur durability (now --journal)
+    bool dur;  // --dur durability (now --journal)
 
     // --journalCommitInterval
     static const int kMaxJournalCommitIntervalMs;
@@ -86,13 +88,13 @@ struct StorageGlobalParams {
 
     // --notablescan
     // no table scans allowed
-    AtomicBool noTableScan{false};
+    AtomicBool noTableScan;
 
     // --directoryperdb
     // Stores each database’s files in its own folder in the data directory.
     // When applied to an existing system, the directoryPerDB option alters
     // the storage pattern of the data directory.
-    bool directoryperdb = false;
+    bool directoryperdb;
 
     // --syncdelay
     // Controls how much time can pass before MongoDB flushes data to the data files
@@ -100,19 +102,19 @@ struct StorageGlobalParams {
     // Do not set this value on production systems.
     // In almost every situation, you should use the default setting.
     static const double kMaxSyncdelaySecs;
-    AtomicDouble syncdelay{60.0};  // seconds between fsyncs
+    AtomicDouble syncdelay;  // seconds between fsyncs
 
     // --queryableBackupMode
     // Puts MongoD into "read-only" mode. MongoD will not write any data to the underlying
     // filesystem. Note that read operations may require writes. For example, a sort on a large
     // dataset may fail if it requires spilling to disk.
-    bool readOnly = false;
+    bool readOnly;
 
     // --groupCollections
     // Dictate to the storage engine that it should attempt to create new MongoDB collections from
     // an existing underlying MongoDB database level resource if possible. This can improve
     // workloads that rely heavily on creating many collections within a database.
-    bool groupCollections = false;
+    bool groupCollections;
 };
 
 extern StorageGlobalParams storageGlobalParams;
